# Sentinel-MCP

./: README.md  api.py  main.py  orchestrator.py  pyproject.toml
draftsafe-extension/: content.js  manifest.json  popup.html  popup.js
ui/: package-lock.json
ui/src/app/: layout.tsx  page.tsx
